--- a/templates/learn/python4.html
+++ b/templates/learn/python4.html
@@ -56,5 +56,6 @@ class Person:
             def __init__(self, name):
                 self.name = name
             </code></pre>
+    <a href="/python5">ไปต่อยังบทเรียนต่อไป</a>
 </body>
 </html>
