--- a/templates/learn/python5.html
+++ b/templates/learn/python5.html
@@ -152,6 +152,6 @@ person = {
 with open("person.json", "w") as file:
     json.dump(person, file, indent=4)  # indent ทำให้ไฟล์อ่านง่ายขึ้น
     </code></pre>
-
+    <a href="/python6">ไปต่อยังบทเรียนต่อไป</a>
 </body>
 </html>
