--- a/templates/learn/python6.html
+++ b/templates/learn/python6.html
@@ -184,6 +184,6 @@ response = requests.get('https://api.example.com/data')
 data = response.json()
 print(data)
     </code></pre>
-    <a href="/home">กลับไปหน้าแรก</a>
+    <a href="/">กลับไปหน้าแรก</a>
 </body>
 </html>
