--- a/templates/topbar.html
+++ b/templates/topbar.html
@@ -4,9 +4,13 @@
             <a href="/">Easy Python</a>
         </div>
         <div class="menu">
+            {% if current_user.is_authenticated %}
             <a href="/dashboard">dashboard</a>
+            <a href="/logout">logout</a>
+            {% else %}
             <a href="/login">login</a>
             <a href="/register">register</a>
+            {% endif %}
         </div>
     </nav>
 </div>
